--- a/CertWithBlock/CertWithBlock/Info.plist
+++ b/CertWithBlock/CertWithBlock/Info.plist
@@ -2,6 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>请点击“允许”以允许访问。</string>
+    <key>NSCameraUsageDescription</key>
+    <string>请点击“允许”以允许访问。</string>
+    <key>NSAppleMusicUsageDescription</key>
+    <string>请点击“允许”以允许访问。</string>
+    <key>NSMicrophoneUsageDescription</key>
+    <string>请点击“允许”以允许访问。</string>
+
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -20,6 +29,11 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
