--- a/CertWithBlock/CertWithBlock/Info.plist
+++ b/CertWithBlock/CertWithBlock/Info.plist
@@ -2,17 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSPhotoLibraryUsageDescription</key>
-    <string>请点击“允许”以允许访问。</string>
-    <key>NSCameraUsageDescription</key>
-    <string>请点击“允许”以允许访问。</string>
-    <key>NSAppleMusicUsageDescription</key>
-    <string>请点击“允许”以允许访问。</string>
-    <key>NSMicrophoneUsageDescription</key>
-    <string>请点击“允许”以允许访问。</string>
-
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>证件</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,6 +27,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>请点击“允许”以允许访问。</string>
+	<key>NSCameraUsageDescription</key>
+	<string>请点击“允许”以允许访问。</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>请点击“允许”以允许访问。</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>请点击“允许”以允许访问。</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
